syntax = "proto3";
package auth_pb;
option go_package = "grpc-go-templete/pkg/pb/auth_pb";

import "user_pb/user.proto";

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse){}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    user_pb.User profile = 1;
    string token = 2;
}